# basicswap

./: .cirrus.yml  .djlint_rules.yaml  .djlintrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README-ZEPH.md  README.md  default.nix  eslint.config.mjs  guix.scm  nano_wallet.help.txt  nix-shell.sh  notes.txt  prepare.sh  pyproject.toml  python.sh  requirements.in  requirements.txt  setup.py  stop-nano_node.sh  stop-particld.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml  securitycodescan.yml  test-electrum.yml  test_coins.yml
basicswap/: __init__.py  base.py  basicswap.py  basicswap_util.py  chainparams.py  config.py  db.py  db_upgrades.py  db_util.py  db_wallet.py  ecc_util.py  ed25519_fast_util.py  explorers.py  http_server.py  interface_bitcore_btc.py  interface_btc.py  interface_ltc.py  interface_nmc.py  interface_part.py  interface_passthrough_btc.py  interface_xmr.py  js_server.py  messages.proto  messages_npb.py  messages_pb2.py  network.py  offer_tracking.py  rfc6979.py  rpc.py  rpc_pool.py  rpc_wow.py  rpc_xhv.py  rpc_xmr.py  rpc_xno.py  script.py  types.py  ui.py  util.py  util_xhv.py  util_xmr.py  (+4 more)
basicswap/amm/: __init__.py  __main__.py  createoffers.py
basicswap/contrib/: Keccak.py  dleag_t.py  ed25519_fast.py  ellipticcurve.py  key.py  rfc6979.py  rpcauth.py
basicswap/interface/: __init__.py  base.py  bch.py  btc.py  dash.py  dcr.py  dgb.py  doge.py  electrumx.py  firo.py  ltc.py  nav.py  nmc.py  part.py  passthrough_btc.py  pivx.py  prepare_util.py  rincoin.py  sal.py  utils.py  veil.py  wow.py  xhv.py  xmr.py  xno.py  yenten.py
basicswap/network/: bsx_network.py  network.py  simplex.py  simplex_chat.py  util.py
basicswap/protocols/: __init__.py  atomic_swap_1.py  nav_swap_1.py  xhv_swap_1.py  xmr_swap_1.py
basicswap/static/: style.css
basicswap/templates/: 404.html  active.html  amm.html  auth_base.html  automation_strategies.html  automation_strategy.html  automation_strategy_new.html  bid.html  bid_xhv.html  bid_xmr.html  bids.html  bids_available.html  changepassword.html  debug.html  donation.html  error.html  explorers.html  footer.html  header.html  identity.html  inc_messages.html  index.html  info.html  login.html  macros.html  offer.html  offer_confirm.html  offer_new.html  offer_new_1.html  offer_new_2.html  offer_success.html  offer_summary_card.html  offers.html  quickswaps.html  rpc.html  sentoffers.html  settings.html  smsgaddresses.html  style.html  tor.html  (+4 more)
basicswap/ui/: app.py  page_amm.py  page_automation.py  page_bids.py  page_debug.py  page_encryption.py  page_identity.py  page_offers.py  page_quickswaps.py  page_settings.py  page_smsgaddresses.py  page_tor.py  page_wallet.py  util.py
basicswap/util/: __init__.py  address.py  crypto.py  daemon.py  ecc.py  extkey.py  integer.py  logging.py  merkle.py  network.py  rfc2440.py  script.py  smsg.py
doc/: api.md  ci.md  dev.md  docker.md  guix.md  install.md  notes.md  release-notes.md  run.docker.example.txt  tor.md  upgrade.md
doc/coins/: RINCOIN-INTEGRATION-SUMMARY.md  adding-new-coin.md  bch.md  dash.md  ltc.md  pivx.md  rincoin-integration-plan.md  rincoin-parameters.md  rincoin.md  yenten.md
doc/protocols/: adaptor_sig.md  adaptor_sig_reversed.md  secret_hash_seller_first.md  seller_first.md  xmr.md
docker/: .env  docker-compose.yml  docker-compose_with_tor.yml  dockerbuild.bat  dockerup.bat  entrypoint.sh  example.env
docker/coindata/: .gitignore
docker/production/: .env  .gitignore  docker-compose.yml  example.env  notes.md
docker/tor/: Dockerfile
gitianpubkeys/: namecoin_JeremyRand.pgp
scripts/: .gitignore  createoffers.py  template_createoffers.json
templates/: advance.html  header.html  index.html
tests/: __init__.py  test_nmc.py  test_prepare.py  test_run.py
(+350 files in other folders)
