[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basicswap"
description = "Simple atomic swap system"
keywords = ["crypto", "cryptocurrency", "particl", "bitcoin", "monero", "wownero"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pyzmq==26.2.0",
    "sqlalchemy==1.4.39",
    "python-gnupg==0.5.3",
    "Jinja2==3.1.4",
    "pycryptodome==3.21.0",
    "PySocks==1.7.1",
    "coincurve@https://github.com/basicswap/coincurve/archive/refs/tags/basicswap_v0.2.zip#sha256=c309deef22c929c9ab5b3adf7adbda940bffcea6c6ec7c66202d6c3d4e3ceb79"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://basicswapdex.com"
Source = "https://github.com/basicswap/basicswap"

[project.scripts]
basicswap-prepare = "basicswap.bin.prepare:main"
basicswap-run = "basicswap.bin.run:main"

[project.optional-dependencies]
dev = [
    "codespell",
    "flake8",
    "hashin",
    "pytest",
]

[tool.hatch.version]
path = "basicswap/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
